# FCG

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-build-env/: action.yml
.github/workflows/: build-matrix.yml  clang-format.yml  codeql-analysis.yml  dependabot-auto-merge.yml  publish-binaries.yml  release-please.yml
Lab1/: CMakeLists.txt  README.md
Lab1/src/: main_text_echo.cpp  main_text_editor.cpp
Lab2/: CMakeLists.txt  my_drawing.cpp
Lab3/: CMakeLists.txt  blockbreaker.cpp  textures.hpp
Lab4/: CMakeLists.txt  hello_gl.cc
Lab4/glad/: gl.h
resources/: info.txt
